# gt-04-2026

./: .gitignore  Cargo.toml  README.md  VERIFY.md  config.toml
src/: config.rs  error.rs  lib.rs  main.rs  metrics.rs  proxy.rs
src/api/: client.rs  dto.rs  mod.rs
src/geom/: dist.rs  grid.rs  mod.rs
src/graph/: chain.rs  mod.rs
src/model/: memory.rs  mod.rs  params.rs  state.rs
src/planner/: assign.rs  mod.rs  tasks.rs  turn.rs
src/predict/: completion.rs  damage.rs  limit.rs  mod.rs  storm.rs
src/tactics/: beaver.rs  build.rs  main_safety.rs  mod.rs  relay.rs  repair.rs  sabotage.rs  upgrades.rs
tests/: beaver.rs  geom.rs  graph_chain.rs  integration_plan.rs  memory.rs  predict.rs  sabotage.rs  upgrades.rs
tools/: analyze_round.py
