[package]
name = "datssol-bot"
version = "0.1.0"
edition = "2021"

[lib]
name = "datssol_bot"
path = "src/lib.rs"

[[bin]]
name = "datssol-bot"
path = "src/main.rs"

[dependencies]
ureq = { version = "2.10", features = ["json"] }
tiny_http = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
pretty_assertions = "1"

[profile.release]
opt-level = 3
lto = "thin"
